src/pages/common/components/RecentChats.less
@import '~css/new/colorTokens';
@import (reference) '~css/typography';

:local {
    .component {
        .menuItem {
            align-items: center;

            &:global > i.icon {
                width: 1.2em;
                float: none !important;
                margin: inherit;
                margin-right: 6px;
            }
        }

        .hasSomethingNew {
            &,
            & > * {
                color: @classic-neutral-grey-2 !important;
            }

            span {
                font-weight: 600;
            }
        }
    }

    /* after react 16 and reactstrap upgrade,
    * set boundariesElement on tooltip and remove.
    */
    .tooltip {
        left: 40px !important;
    }

    .chatsCategory:last-child {
        padding-bottom: 11px;
    }
}

